--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 08 2020 03:41:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 03:25:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7cd50ffb98d369cf9ab6d0" data-wf-site="5f7cd50ffb98d335cc9ab6cf">
 <head>
   <meta charset="utf-8">
@@ -11,23 +11,24 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/bwp-launch.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
   <div>
-    <div class="container-2 w-container"><img src="images/BWP-phat.svg" loading="lazy" alt="" class="image-2"></div>
+    <div class="container-2 w-container"><img src="images/BWP-phat.svg" loading="lazy" alt="" class="image-2">
+      <p class="paragraph-2">But, Whole Press is a publishing collective interested in work that is somatic, public facing, absurdist, interventionist, and at times contradictory.<br><br>Based in the San Francisco Bay Area, on unceded Ohlone Land, we are working on Risograph printing, online publishing, and meaningful collaborations.<br><br>Contact us for services, ideas, collabos and advice about shitposting.</p>
+    </div>
   </div>
   <div class="section">
-    <div class="w-container">
+    <div class="container-6 w-container">
       <a href="#" class="link-block w-inline-block">
-        <div class="text-block-5">Experimental<br><br>Publishing</div><img src="images/Orange-Spinner.svg" loading="lazy" data-w-id="e18749df-c4f7-c16b-9e90-d5654c9a0bfc" alt="" class="image-4"></a><a href="#" class="link-block w-inline-block"><img src="images/Purple-Spinner.svg" loading="lazy" data-w-id="48e16e6d-dfb1-b5ba-5302-41a0bd32e7c0" alt="" class="image-3"><div class="text-block-3">Web <br><br>Design</div></a>
+        <div class="text-block-5">Experimental<br><br>Publishing</div><img src="images/Orange-Spinner.svg" loading="lazy" data-w-id="e18749df-c4f7-c16b-9e90-d5654c9a0bfc" alt="" class="image-4"></a><a href="web-design.html" class="link-block w-inline-block"><img src="images/Purple-Spinner.svg" loading="lazy" data-w-id="48e16e6d-dfb1-b5ba-5302-41a0bd32e7c0" alt="" class="image-3"><div class="text-block-3">Web <br><br>Design</div></a>
       <a href="riso-printing.html" class="div-block w-inline-block">
         <div class="text-block-2">Riso<br> <br>Printing</div><img src="images/Yellow-Spinner.svg" loading="lazy" data-w-id="107f1823-f454-e3a8-ab9c-7a9538c97684" alt="" class="image"></a>
-      <p class="paragraph-2">But Whole Press is a publishing collective interested in work that is somatic, public facing, absurdist, interventionist, and at times contradictory.<br><br><br>Based in the San Francisco Bay Area, on unceded Ohlone Land, we are working on Risograph printing, online publishing, and meaningful collaborations.<br><br><br><br>Contact us for services, ideas, collabos and advice about shitposting.</p>
     </div>
   </div>
   <div>
