--- a/riso-printing.html
+++ b/riso-printing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 08 2020 03:41:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 03:25:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7e744a396a636125098ce3" data-wf-site="5f7cd50ffb98d335cc9ab6cf">
 <head>
   <meta charset="utf-8">
@@ -13,10 +13,10 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/bwp-launch.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-2">
@@ -29,17 +29,19 @@
   <div>
     <div class="container-3 w-container">
       <h1 class="heading">BWP loves all things printed, but we specialize in Risograph printing.<br></h1>
-      <p class="paragraph"><span>We offer full service risograph printing, including binding and trimming.<br>Posters, Zines, Books, Stickers, Envelops, upto tabloid size.<br>We currently have three colors<br>(More coming!)</span></p>
+      <p class="paragraph-4"><br>We offer full service Risograph printing, including binding and trimming. Experienced in making books, zines, stickers, envelopes, posters, and anything paper (up to tabloid size 11&quot;x17&quot;).<br><br>We currently have three colors of ink:</p>
       <div class="text-block-9">Medium Blue     ミディアムブルー    HEX 3255A4    PANTONE 286 U</div>
       <div class="text-block-9-copy">Burgundy     バーガンディーレッド    HEX 914E72    PANTONE 235 U</div>
       <div class="blackblock-copy">Black     ブラック    HEX 000000    PANTONE BLACK U</div>
+    </div>
+    <div class="container-7 w-container">
       <a href="https://forms.gle/viuTNns6Ph6zQU8bA" target="_blank" class="link-block-2 w-inline-block">
         <div class="blackblock">Request printed color chart</div>
       </a>
     </div>
   </div>
-  <div>
-    <div class="w-layout-grid grid-2"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/ColorCHart-21.jpeg" loading="lazy" sizes="(max-width: 479px) 60vw, 230px" srcset="images/ColorCHart-21.jpeg 500w, images/ColorCHart-21.jpeg 800w, images/ColorCHart-21.jpeg 1080w, images/ColorCHart-21.jpeg 1600w, images/ColorCHart-21.jpeg 2000w, images/ColorCHart-21.jpeg 2372w" alt="" class="image-8"><script type="application/json" class="w-json">{
+  <div class="section-2">
+    <div class="w-layout-grid grid-2"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/ColorCHart-21.jpeg" loading="lazy" sizes="230px" srcset="images/ColorCHart-21-p-500.jpeg 500w, images/ColorCHart-21-p-800.jpeg 800w, images/ColorCHart-21-p-1080.jpeg 1080w, images/ColorCHart-21-p-1600.jpeg 1600w, images/ColorCHart-21-p-2000.jpeg 2000w, images/ColorCHart-21.jpeg 2372w" alt="" class="image-8"><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -53,7 +55,7 @@
     }
   ],
   "group": "BWP Riso"
-}</script></a><a href="#" id="w-node-ddea70f5d6eb-25098ce3" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/ColorCHart.jpeg" loading="lazy" sizes="(max-width: 767px) 80vw, 500px" srcset="images/ColorCHart.jpeg 500w, images/ColorCHart.jpeg 800w, images/ColorCHart.jpeg 1080w, images/ColorCHart.jpeg 1600w, images/ColorCHart.jpeg 2000w, images/ColorCHart.jpeg 2437w" alt="BWP Color Chart
+}</script></a><a href="#" id="w-node-ddea70f5d6eb-25098ce3" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/ColorCHart.jpeg" loading="lazy" sizes="(max-width: 767px) 80vw, 500px" srcset="images/ColorCHart-p-500.jpeg 500w, images/ColorCHart-p-800.jpeg 800w, images/ColorCHart-p-1080.jpeg 1080w, images/ColorCHart-p-1600.jpeg 1600w, images/ColorCHart-p-2000.jpeg 2000w, images/ColorCHart.jpeg 2437w" alt="BWP Color Chart
 " class="image-7"><script type="application/json" class="w-json">{
   "items": [
     {
@@ -68,7 +70,7 @@
     }
   ],
   "group": "BWP Riso"
-}</script></a><a href="#" class="lightbox-link-3 w-inline-block w-lightbox"><img src="images/ColorCHart-24.jpeg" loading="lazy" sizes="(max-width: 479px) 63vw, 300px" srcset="images/ColorCHart-24.jpeg 500w, images/ColorCHart-24.jpeg 800w, images/ColorCHart-24.jpeg 1080w, images/ColorCHart-24.jpeg 1600w, images/ColorCHart-24.jpeg 2000w, images/ColorCHart-24.jpeg 2406w" alt="" class="image-9"><script type="application/json" class="w-json">{
+}</script></a><a href="#" class="lightbox-link-3 w-inline-block w-lightbox"><img src="images/ColorCHart-24.jpeg" loading="lazy" sizes="(max-width: 479px) 63vw, 300px" srcset="images/ColorCHart-24-p-500.jpeg 500w, images/ColorCHart-24-p-800.jpeg 800w, images/ColorCHart-24-p-1080.jpeg 1080w, images/ColorCHart-24-p-1600.jpeg 1600w, images/ColorCHart-24-p-2000.jpeg 2000w, images/ColorCHart-24.jpeg 2406w" alt="" class="image-9"><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
