--- a/web-design.html
+++ b/web-design.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 08 2020 03:41:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 03:25:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7e83333f4e95fd8bb7cb65" data-wf-site="5f7cd50ffb98d335cc9ab6cf">
 <head>
   <meta charset="utf-8">
@@ -13,10 +13,10 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/bwp-launch.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-3">
@@ -25,13 +25,15 @@
   </div>
   <div>
     <div class="container-4 w-container">
-      <p class="paragraph-3"><br>We love publishing of all kinds and the web is no exception!<br>We offer full service Web design and Web Development<br>Everything from websites for online exhibitions, portfolios or small business.<br>We offer a wide ranging options from hard coded sites to platforms solutions such as Cargo and Squarespace as well as automated CMS solutions via Webflow.<br>We are passionate about <span>typography</span>, motion and interactivity<br>with a penchant for simplicity and elegance in our visual sensibilities.<br><br><br>‍</p><a href="mailto:info@butwhole.press	?subject=Hello%20BWP!" class="button w-button">Reachout</a>
-      <div><img src="images/Orange-Spinner.svg" loading="lazy" data-w-id="6e97ba43-d24b-2b3b-e60b-ba7a17c3b03b" alt="" class="image-13">
-        <h1 class="heading-2">BWP <br>Loves<br>The Web!</h1>
+      <h1 class="heading-4">BWP loves publishing of all kinds and the web is no exception!<br></h1>
+      <div><img src="images/Purple-Spinner.svg" loading="lazy" data-w-id="6e97ba43-d24b-2b3b-e60b-ba7a17c3b03b" alt="" class="image-13">
+        <h1 class="heading-2">WE<br>LOVE<br>WEB!</h1>
       </div>
+      <p class="paragraph-3">‍<br>We offer full service web design and web development, everything from websites for online exhibitions, portfolios, or small business.<br><br>With wide-ranging options from hard coded sites to platforms solutions such as Cargo and Squarespace as well as automated CMS solutions via Webflow.<br>‍<br>We are passionate about typography, motion and interactivity, with a penchant for simplicity and elegance in our visual sensibilities.<br>‍</p>
     </div>
+    <div class="container-8 w-container"><a href="mailto:info@butwhole.press	?subject=Hello%20BWP!" class="button w-button">Reach Out</a></div>
     <div class="container-5 w-container">
-      <h3 class="heading-3">Checkout our latest work below;</h3><a href="https://oncemorewithfeeling.art.ucla.edu/" target="_blank" class="link-block-3 w-inline-block"><img src="images/OnceMore.jpg" loading="lazy" srcset="images/OnceMore.jpg 800w, images/OnceMore.jpg 1080w, images/OnceMore.jpg 1600w, images/OnceMore.jpg 2000w, images/OnceMore.jpg 2600w, images/OnceMore.jpg 2780w" sizes="(max-width: 767px) 100vw, 650px" alt="" class="image-14"></a></div>
+      <h3 class="heading-3">Check out our latest work below:</h3><a href="https://oncemorewithfeeling.art.ucla.edu/" target="_blank" class="link-block-3 w-inline-block"><img src="images/OnceMore.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, 650px" srcset="images/OnceMore-p-800.jpeg 800w, images/OnceMore-p-1080.jpeg 1080w, images/OnceMore-p-1600.jpeg 1600w, images/OnceMore-p-2000.jpeg 2000w, images/OnceMore-p-2600.jpeg 2600w, images/OnceMore.jpg 2780w" alt="" class="image-14"></a></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f7cd50ffb98d335cc9ab6cf" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
