--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 09 2020 03:25:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 03:36:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7cd50ffb98d369cf9ab6d0" data-wf-site="5f7cd50ffb98d335cc9ab6cf">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
 <body class="body">
   <div>
     <div class="container-2 w-container"><img src="images/BWP-phat.svg" loading="lazy" alt="" class="image-2">
-      <p class="paragraph-2">But, Whole Press is a publishing collective interested in work that is somatic, public facing, absurdist, interventionist, and at times contradictory.<br><br>Based in the San Francisco Bay Area, on unceded Ohlone Land, we are working on Risograph printing, online publishing, and meaningful collaborations.<br><br>Contact us for services, ideas, collabos and advice about shitposting.</p>
+      <p class="paragraph-2">But, Whole Press is a publishing collective interested in work that is somatic, public facing, absurdist, interventionist, and at times contradictory.<br><br>Based in the San Francisco Bay Area, on unceded Ohlone land, we are working on Risograph printing, online publishing, and meaningful collaborations.<br><br>Contact us for services, ideas, collabos and advice about shitposting.</p>
     </div>
   </div>
   <div class="section">
