--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 09 2020 03:36:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 06:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7cd50ffb98d369cf9ab6d0" data-wf-site="5f7cd50ffb98d335cc9ab6cf">
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/bwp-launch.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -20,7 +20,10 @@
 <body class="body">
   <div>
     <div class="container-2 w-container"><img src="images/BWP-phat.svg" loading="lazy" alt="" class="image-2">
-      <p class="paragraph-2">But, Whole Press is a publishing collective interested in work that is somatic, public facing, absurdist, interventionist, and at times contradictory.<br><br>Based in the San Francisco Bay Area, on unceded Ohlone land, we are working on Risograph printing, online publishing, and meaningful collaborations.<br><br>Contact us for services, ideas, collabos and advice about shitposting.</p>
+      <p class="paragraph-2">But, Whole Press is a publishing collective interested in work that is somatic, public facing, absurdist, interventionist, and at times contradictory.<br><br>Based in the San Francisco Bay Area, on unceded Ohlone land, we are working on Risograph printing, online publishing, and meaningful collaborations.<br><br>Contact us for services, ideas, collabos and advice about shitposting.<br><br></p>
+      <a href="mailto:info@butwhole.press?subject=HI%20BWP" class="div-block-2 w-inline-block">
+        <div class="text-block-10">info@butwhole.press</div>
+      </a>
     </div>
   </div>
   <div class="section">
