--- a/riso-printing.html
+++ b/riso-printing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 09 2020 03:36:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 06:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7e744a396a636125098ce3" data-wf-site="5f7cd50ffb98d335cc9ab6cf">
 <head>
   <meta charset="utf-8">
@@ -13,7 +13,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/bwp-launch.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -23,13 +23,13 @@
   <div>
     <div class="w-container"><a href="index.html" class="w-inline-block"><img src="images/BWP-phat.svg" loading="lazy" alt="" class="image-5"></a></div>
     <div><img src="images/Yellow-Spinner.svg" loading="lazy" data-w-id="94d47ac2-5a34-d946-7432-239fb461a095" alt="" class="image-6">
-      <div class="text-block-6">WE<br>‍<br>LOVE <br><br>RISO!</div>
+      <div class="text-block-6"><br>‍<br>WE<br><br>LOVE <br><br>RISO!</div>
     </div>
   </div>
   <div>
     <div class="container-3 w-container">
       <h1 class="heading">BWP loves all things printed, but we specialize in Risograph printing.<br></h1>
-      <p class="paragraph-4"><br>We offer full service Risograph printing, including binding and trimming. Experienced in making books, zines, stickers, envelopes, posters, and anything paper (up to tabloid size 11&quot;x17&quot;).<br><br>We currently have three colors of ink:</p>
+      <p class="paragraph-4"><br>We offer full service Risograph printing, including binding and trimming. Experienced in making books, zines, stickers, envelopes, posters, and anything paper (up to tabloid size 11&quot;×17&quot;).<br><br>We currently have three colors of ink:</p>
       <div class="text-block-9">Medium Blue     ミディアムブルー    HEX 3255A4    PANTONE 286 U</div>
       <div class="text-block-9-copy">Burgundy     バーガンディーレッド    HEX 914E72    PANTONE 235 U</div>
       <div class="blackblock-copy">Black     ブラック    HEX 000000    PANTONE BLACK U</div>
